--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "http": "^0.0.1-security",
+    "path": "^0.12.7",
     "simple-json-db": "^1.2.3",
     "twit": "^2.2.11"
   },
-  "engines": { "node": "14.x" }
+  "engines": {
+    "node": "14.x"
+  }
 }
